# glchess

./: CMakeLists.txt  old.txt  run.sh
headers/: mesh.hpp
include/: camera.h  camera.hpp  ebo.h  mesh.h  shaderClass.h  texture.h  vao.h  vbo.h
samples/: mesh.cpp  mesh.hpp
shaders/: 3.3.shader.frag  3.3.shader.vert  old.frag
sources/: main.old
src/: camera.cpp  ebo.cpp  main.cpp  mesh.cpp  shaderClass.cpp  texture.cpp  vao.cpp  vbo.cpp
